# phagepy

./: README.md  __init__.py  __init__.py~  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/source/: conf.py  index.rst
phagepy/: #preprocessing.py#  .#preprocessing.py  Untitled.ipynb  Untitled1.ipynb  __init__.py  __init__.py~  analysis.py  minimal-span-set_development.ipynb  motif.py  plotting.py  preprocessing.py  read_write.py
phagepy/.ipynb_checkpoints/: __init__-checkpoint.py  plotting-checkpoint.py  preprocessing-checkpoint.py  read_write-checkpoint.py
preprocessing/: preprocessing.py~
test/: Untitled.ipynb  test_counts.csv  test_counts_sparse.csv  test_counts_transpose.csv  test_meta.csv  test_pp.py  test_pp.py~
test/.ipynb_checkpoints/: test_pp-checkpoint.py
tutorials/: APS1_metadata.csv  antiHU_tutorial.ipynb  antihu_metadata.csv
tutorials/.ipynb_checkpoints/: antiHU_tutorial-checkpoint.ipynb
